2007-10-10  Benoit Sigoure  <tsuna@lrde.epita.fr>

	More dependency fixes in ast.mk.
	* src/ast/ast.mk: Fix dependencies for all.hh, ignores and fwd.hh.

2007-10-10  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Fix the non-recursive Makefile.
	* dev/ast-nodes-mk-gen: Prefix the paths to the files listed in the
	piece of Makefile by `ast/'.
	* src/ast/ast.mk: Be nicer to automake by enabling it to include the
	pieces of Makefile and properly resolve the dependencies.  Fix the
	names of several targets because now, file paths must be prefixed by
	`ast/'.

2007-10-09  Akim Demaille  <akim.demaille@free.fr>

	echo.
	* src/object/object-class.cc (object_class_echo): Issue to ***.

2007-10-09  Akim Demaille  <akim.demaille@free.fr>

	Operators are identifiers.
	* src/parser/bison/ugrammar.y (id): New.
	* src/parser/bison/ugrammar.y, src/parser/bison/utoken.l
	(TOK_STAR_ASSIGN, TOK_DIV_ASSIGN): New.
	(TOK_MINUSMINUS, TOK_PLUSPLUS, TOK_PLUSASSIGN, TOK_MINUSASSIGN):
	Rename as...
	(TOK_MINUS_MINUS, TOK_PLUS_PLUS, TOK_PLUS_ASSIGN, TOK_MINUS_ASSIGN):
	these.
	* share/urbi/urbi.u: Use these new symbols to define these
	operators.

2007-10-09  Akim Demaille  <akim.demaille@free.fr>

	Simplify ast/ast.mk.
	* src/ast/ast.mk: It is no longer needed to handle the special
	case of location.hh which is now a regular dependency.

2007-10-09  Akim Demaille  <demaille@gostai.com>

	ast/ast.mk.
	* src/ast/Makefile.am: Rename as...
	* src/ast/ast.mk: this.
	Adjust to work as a file included by src/Makefile.am.
	* configure.ac, src/Makefile.am: Adjust.

2007-10-09  Akim Demaille  <demaille@gostai.com>

	Float.set.
	* src/object/float-class.cc (float_class_set): New.
	Remove support for in place arithmetics as primitives.
	* share/urbi/urbi.u (Float.+=, Float.-=, Float.*=)
	(Float./=): New.

2007-10-09  Akim Demaille  <demaille@gostai.com>

	!.
	* src/object/object.hxx: Add missing !.

2007-10-09  Akim Demaille  <demaille@gostai.com>

	Atom::traits_type.
	* src/object/atom.hh (kind): New.